[package]
name = "winaudio"
version = "1.0.2"
edition = "2018"

authors = ["Lonami Exo <totufals@hotmail.com>"]
license = "MIT OR Apache-2.0"
description = "Enables audio playback of waveform audio in Windows (play sounds from wav files)"
homepage = "https://github.com/lonami/winaudio"
documentation = "https://docs.rs/winaudio"
repository = "https://github.com/lonami/winaudio"
readme = "README.md"
keywords = ["audio", "sound", "playback", "wav", "windows"]
categories = ["api-bindings", "multimedia::audio", "os::windows-apis"]

[target.'cfg(windows)'.dependencies]
widestring = "0.4.3"
winapi = { version = "0.3", features = ["mmsystem", "mmeapi"] }

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
